--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@formkit/vue": "^1.0.0-beta.9",
     "vue": "^3.2.37",
+    "vue-formio": "^4.0.8",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
