--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@formkit/vue": "^1.0.0-beta.9",
+    "currency.js": "^2.0.4",
+    "pinia": "^2.0.15",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.37",
     "vue-formio": "^4.0.8",
     "vue-router": "^4.0.16"
